tests/jsr335/Semantics/LambdaExpressions/ReservedKeyword/ShouldFail/syntax05/Test.java


public class Test {

	public int foo(int _) {
		return _ + 4;
	}
	
	public static void main(String[] args) {
		
    }
	
	
}